--- a/src/ui/page/user/UserAvatar.pug
+++ b/src/ui/page/user/UserAvatar.pug
@@ -21,8 +21,11 @@ script.
 style.
 	.user-avatar
 		aspect-ratio 1
+		border 2px solid transparent
 		border-radius 999px
 		height 20px
+		&:hover
+			border-color wheat
 	.user-avatar-not-available
 		border 4px dashed #666
 	.user-avatar-size-large
