--- a/src/ui/page/listing/Subreddit.pug
+++ b/src/ui/page/listing/Subreddit.pug
@@ -1,10 +1,14 @@
 script.
+	import { getContext } from 'svelte'
 	import api from '../../../api/index.js'
 	import TextHTML from '../../framework/TextHTML.pug'
 	export name = null
 	info = null
 	rules = null
-	api.loadWatch(api.ID('subreddit', name), (x) -> { data: info } = x)
+	set_theme_color = getContext('set_theme_color')
+	api.loadWatch(api.ID('subreddit', name), ({ data: info }) ->
+		set_theme_color(info?.primary_color or info?.key_color)
+	)
 	api.loadWatch(api.ID('subreddit_rules', name), (x) -> { data: rules } = x)
 
 svelte:head
