--- a/src/ui/page/post/PostComment.pug
+++ b/src/ui/page/post/PostComment.pug
@@ -70,17 +70,15 @@ style.
 	.comment-more-replies
 		margin-top 20px
 	.comment-replies
-		border-left 1px solid #666
+		border-left 1px solid rgba(0,0,0,0.1)
 		margin-left 9px
 		margin-top 10px
 		padding-left 12px
 	.comment-text
-		background #555
+		background rgba(0,0,0,0.1)
 		border-radius 10px
 		padding 1ch
 	:global(.comment-text img)
-		border-radius 6px
-		display inline
 		margin-block-start 1px
 		margin-inline-start 1px
 		max-height 9em
