--- a/src/ui/framework/MediaPlayer.pug
+++ b/src/ui/framework/MediaPlayer.pug
@@ -131,7 +131,7 @@ style.
 		.media-player:not(:fullscreen) video:hover + &
 			opacity 1
 	.media-scrobbler
-		background var(--color-control)
+		background var(--c-con-weak)
 		border-radius 6px
 		flex 1
 		position relative
@@ -154,7 +154,7 @@ style.
 		width 100%
 	.media-volume
 		align-items center
-		background var(--color-control)
+		background var(--c-con-weak)
 		border-radius 6px
 		display flex
 		position relative
