--- a/src/ui/listing/ListingPost.pug
+++ b/src/ui/listing/ListingPost.pug
@@ -61,7 +61,7 @@ style.
 		gap 5px
 	.listing-post-metadata
 		align-items center
-		color #888
+		color var(--c-text-weak)
 		display flex
 		justify-content space-between
 		width 100%
