--- a/src/ui/page/post/Post.pug
+++ b/src/ui/page/post/Post.pug
@@ -195,7 +195,7 @@ style.
 	.post-comments-actions
 		margin-top 1em
 	.post-comments-label
-		color #888
+		color var(--c-text-weak)
 		font-size 10px
 		font-feature-settings 'cpsp'
 		text-transform uppercase
@@ -231,7 +231,7 @@ style.
 		margin-top 1em
 	.post-metadata
 		align-items center
-		color #888
+		color var(--c-text-weak)
 		display flex
 		gap 10px
 		margin-top 1ch
