--- a/src/ui/page/post/PostComment.pug
+++ b/src/ui/page/post/PostComment.pug
@@ -75,7 +75,7 @@ style.
 		margin-top 10px
 		padding-left 12px
 	.comment-text
-		background rgba(0,0,0,0.1)
+		background var(--c-con-norm)
 		border-radius 10px
 		padding 1ch
 	:global(.comment-text img)
