--- a/src/ui/page/user/User.pug
+++ b/src/ui/page/user/User.pug
@@ -43,7 +43,7 @@ style.
 		&::-webkit-scrollbar
 			display none
 	.user-age
-		color #888
+		color var(--c-text-weak)
 		font-size 12pt
 	.user-basic-info
 		display grid
