--- a/src/ui/base/BaseLayout.pug
+++ b/src/ui/base/BaseLayout.pug
@@ -9,24 +9,23 @@ script.
 	export page_data = null
 	export page_type = null
 
-	background_color = 'var(--color-background-default)'
-	color = 'var(--color-default)'
+	background_color = null
+	color_strategy = 'dark-background'
 	set_theme_color = (css_color) ->
 		if css_color
 			background_color = css_color
-			color = new Color(css_color).asContrastHex()
-		else
-			background_color = 'var(--color-background-default)'
-			color = 'var(--color-default)'
+			color_strategy = if new Color({ hex: css_color }).isLight() then 'light-background' else 'dark-background'
 	setContext('set_theme_color', set_theme_color)
 
-main(style='background:{background_color};color:{color}')
+main(class='color-strategy-{color_strategy}' style='background:{background_color}')
 	BaseNavigation
 	BasePageContent(data={page_data} type={page_type})
 	BaseListingContent(data={{ ...page_data, ...listing_data }} listing_type={listing_type} page_type={page_type})
 
 style.
 	main
+		background-color var(--c-back-default)
+		color var(--c-text-strong)
 		display grid
 		grid-template-columns 1fr 720px 1fr
 		height 100vh
